[package]
name = "lttb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lttb"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
num-traits = "0.2.18"
# numpy = "0.20.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
